--- a/public/styles.css
+++ b/public/styles.css
@@ -120,7 +120,7 @@ input[type="text"], input[type="number"] {
     margin-left: 8px;
 }
 .badge.select-badge {
-    background: #256f8a; /* 연한 회색 배경 */
+    background: #5a3e7c; /* 연한 회색 배경 */
     color: #b1b1b1;      /* 연한 글자색 */
 }
 /* 화살표 정렬 및 회전 */
