--- a/public/styles.css
+++ b/public/styles.css
@@ -120,7 +120,7 @@ input[type="text"], input[type="number"] {
     margin-left: 8px;
 }
 .badge.select-badge {
-    background: #08ab92; /* 연한 회색 배경 */
+    background: #45167f; /* 연한 회색 배경 */
     color: #eaeae9;      /* 연한 글자색 */
 }
 /* 화살표 정렬 및 회전 */
