--- a/public/styles.css
+++ b/public/styles.css
@@ -120,8 +120,8 @@ input[type="text"], input[type="number"] {
     margin-left: 8px;
 }
 .badge.select-badge {
-    background: #45167f; /* 연한 회색 배경 */
-    color: #eaeae9;      /* 연한 글자색 */
+    background: #63b9b2; /* 연한 회색 배경 */
+    color: #000;      /* 연한 글자색 */
 }
 /* 화살표 정렬 및 회전 */
 .arrow { 
